<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id = "@+id/main"
    >
<ScrollView 
	android:id="@+id/scrllvwNo1" 
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >	

<!--************    BALANCE   ***************    -->    
    <TextView 
    		android:id = "@+id/lbl_box_balance"  
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:gravity = "center"
		    android:layout_margin = "5dp"
		    android:background = "@drawable/brakebox"	
		    android:textColor = "#FFFFFF"    
		    android:textSize = "20dp"
		    android:text="@string/lbl_box_balance"  		    
		    />
	
	<RelativeLayout 
	 		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
	<TextView  
    android:id="@+id/last_response"
    android:layout_width="200dp"
    android:layout_height="wrap_content" 
    android:layout_margin = "5dp"    
    android:text="@string/init_last_response"
    android:textSize = "15dp"
    />	
    <Button android:id="@+id/sendSmsBtn" 
	android:layout_width = "fill_parent"
    android:layout_height="wrap_content"
 	android:layout_margin = "5dp"
 	android:layout_toRightOf = "@id/last_response"
 	android:layout_alignParentRight = "true"
 	android:textSize = "15dp"
    android:text="@string/bt_request" /> 
    </RelativeLayout> 
	    

<!--************    SETTINGS   ***************    -->    
    <TextView   
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:gravity = "center"
		    android:layout_margin = "5dp"
		    android:background = "@drawable/brakebox"	
		    android:textColor = "#FFFFFF"    
		    android:textSize = "20dp"
		    android:text="@string/lbl_box_settings"  		    
		    />
	 <RelativeLayout 
	 		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
	 
	 <TextView  
		    android:id = "@+id/lbl_request_address"	    
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft = "5dp"
		    android:text = "@string/lbl_request_address"	
		    android:textSize = "15dp"	    
		    />
	 <TextView
        android:id="@+id/ed_request_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "5dp"
        android:enabled = "false"        
		android:layout_toRightOf = "@id/lbl_request_address"
		android:textSize = "15dp"
		android:text = "ed_request_address"
       />
       	    
	 <TextView  
		    android:id = "@+id/lbl_request_message"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft = "5dp"
		    android:text = "@string/lbl_request_message"
		    android:layout_below="@id/ed_request_address"
		    android:textSize = "15dp"
		    />
	<TextView
        android:id="@+id/ed_request_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "5dp"
        android:enabled = "false"        
		android:layout_toRightOf = "@id/lbl_request_message"
		android:layout_alignTop = "@id/lbl_request_message"
		android:text = "ed_request_message"
		android:textSize = "15dp"
       />	    
	 <TextView  
		    android:id = "@+id/lbl_response_address"
		    android:layout_width="wrap_content" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft = "5dp"
		    android:text = "@string/lbl_response_address"
		    android:layout_below="@id/ed_request_message"
		    android:textSize = "15dp"
		    />	
	<TextView
        android:id="@+id/ed_response_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "5dp"     
        android:enabled = "false"   
		android:layout_toRightOf = "@id/lbl_response_address"
		android:layout_alignTop = "@id/lbl_response_address"
		android:text = "resp_address"
		android:textSize = "15dp"
       />	
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft = "5dp"       
		android:layout_below = "@id/ed_response_address"
		android:text = "*Чуточку позже можно будет подстроить эти параметры под вашего оператора"
		android:textSize = "10dp"
       />           	    	    
   </RelativeLayout>
 
<!--************    DEBUG   ***************    -->    
    <TextView   
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:gravity = "center"
		    android:layout_margin = "5dp"
		    android:background = "@drawable/brakebox_red"	
		    android:textColor = "#FFFFFF"  
		    android:textSize = "20dp"  
		    android:text="Debug"  		    
		    />
		    
    <Button android:id="@+id/dbgBtn" android:layout_width="wrap_content" 
        android:layout_height="wrap_content" android:text="Emulate fake response"
        android:textSize = "15dp" />  
   <TextView  
		    android:id = "@+id/netwOperatorId"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_marginLeft = "5dp"
		    android:text = "operator id"
		    android:textSize = "15dp"
		    />
    
    <TextView  
		    android:id = "@+id/netwOperatorName"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:layout_marginLeft = "5dp" 
		    android:text = "operator name"
		    android:textSize = "15dp"
    />

	

<!--************    ABOUT   ***************    -->
    <TextView   
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:gravity = "center"
		    android:layout_margin = "5dp"
		    android:background = "@drawable/brakebox"	
		    android:textColor = "#FFFFFF"    
		    android:textSize = "20dp"
		    android:text="@string/lbl_box_about"  
		    />
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_margin = "5dp"
    android:text="@string/version"  
    android:textSize = "15dp"  />

    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_margin = "5dp" 
    android:text="@string/about"  
    android:textSize = "15dp"  />
    
    <TextView  
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:layout_margin = "5dp" 
    android:textStyle = "bold"
    android:text="@string/note"  
    android:textSize = "15dp"  />

<!--************    SHARE   ***************    -->
    <TextView   
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:gravity = "center"
		    android:layout_margin = "5dp"
		    android:background = "@drawable/brakebox"	
		    android:textColor = "#FFFFFF"    
		    android:textSize = "20dp"
		    android:text="@string/lbl_box_share"  
		    />
	<ImageView
			android:layout_width = "wrap_content"
			android:layout_height = "wrap_content"
			android:layout_gravity = "center"
			android:src = "@drawable/qrcode"
			android:scaleType = "center"/>	    
    
</LinearLayout>    
</ScrollView>
</LinearLayout>
